sample-webpack/demo-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-webpack
    app.kubernetes.io/name: sample-webpack
  name: sample-webpack
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: sample-webpack
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-webpack
        app.kubernetes.io/name: sample-webpack
        version: v0.3.7
    spec:
      containers:
      - env:
        - name: CONFIGMAP_HASH
          value: 90e5e222fb6af72fd4647f2631e6884a
        - name: SECRET_HASH
          value: ''
        image: nalbam/sample-webpack:v0.3.7
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: sample-webpack
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 110m
            memory: 134Mi
          requests:
            cpu: 100m
            memory: 120Mi
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
