sample-webpack/demo-prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-webpack
    app.kubernetes.io/name: sample-webpack
  name: sample-webpack
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sample-webpack.demo.mzdev.be
      http:
        paths:
          - backend:
              serviceName: sample-webpack
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sample-webpack.demo.mzdev.be
      secretName: sample-webpack-mzdev-tls
